# cc-proxy

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  cc-proxy.dynamo.toml  cc-proxy.k8s.toml  cc-proxy.local.toml  cc-proxy.toml  shadow-proxy.dynamo.toml  shadow-proxy.local.toml  shadow-proxy.toml
.github/workflows/: ci.yml
crates/cc-proxy/: Cargo.toml
crates/cc-proxy/src/: config.rs  main.rs  mode.rs  models.rs  openinference.rs  server.rs
crates/cc-proxy/src/convert/: mod.rs  types.rs
crates/cc-proxy/src/proxy/: compare.rs  mod.rs  primary.rs  shadow.rs
crates/cc-tracing/: Cargo.toml
crates/cc-tracing/src/: config.rs  otlp.rs  spans.rs
crates/shadow-proxy/: Cargo.toml
crates/shadow-proxy/src/: config.rs  main.rs  mode.rs  openinference.rs  server.rs  stats.rs
crates/shadow-proxy/src/convert/: anthropic_to_openai.rs  mod.rs  types.rs  validation.rs
crates/shadow-proxy/src/proxy/: correlation.rs  mod.rs  primary.rs  shadow.rs
crates/shadow-tracing/: Cargo.toml
crates/shadow-tracing/src/: config.rs  lib.rs  otlp.rs  spans.rs
widget/ShadowProxyWidget/: Package.swift  build.sh
widget/ShadowProxyWidget/.build/: build.db  debug.yaml  release.yaml
widget/ShadowProxyWidget/.build/ShadowProxyWidget.app/Contents/: Info.plist
widget/ShadowProxyWidget/.build/ShadowProxyWidget.app/Contents/MacOS/: ShadowProxyWidget
widget/ShadowProxyWidget/.build/arm64-apple-macosx/release/: plugin-tools-description.json
widget/ShadowProxyWidget/.build/arm64-apple-macosx/release/ModuleCache/1CE9MG16SKB3S/: ApplicationServices-1CRCAN744IO4N.pcm  CFNetwork-31P8GDC5EWL41.pcm  CUPS-2KH16NWVLNVO0.pcm  ColorSync-1KWH2T10UXMVF.pcm  CoreFoundation-1YUXQIQY0O2PG.pcm  CoreGraphics-3BVRDEA9TPJO6.pcm  CoreText-2TWBA4D5T9PK8.pcm  CoreTransferable-2R8U0VHQ829LU.pcm  CoreVideo-2TUG535GNYVWG.pcm  DataDetection-VJZRRQZ9LJ5H.pcm  DiskArbitration-QUEIKMA743UI.pcm  Dispatch-TQFI8E3F5ULS.pcm  IOSurface-C02TFLLHKUMB.pcm  ImageIO-1TXEVO4OVZF0F.pcm  MachO-1E48RKM8MIOQ3.pcm  Metal-18EKZI9NPGSMT.pcm  ObjectiveC-3HFLVFB2XGC12.pcm  OpenGL-329UYKZPXKRCD.pcm  Security-2M3Q6MCL8PZ2G.pcm  SwiftShims-6PVXR3VD9JVP.pcm  UniformTypeIdentifiers-2FSB314US6HN5.pcm  XPC-1BHHNDBXNIN4T.pcm  _AvailabilityInternal-FOXKIHXXPWT.pcm  _Builtin_float-3PGQF5YETHUX5.pcm  _Builtin_inttypes-3PGQF5YETHUX5.pcm  _Builtin_limits-3PGQF5YETHUX5.pcm  _Builtin_stdarg-3PGQF5YETHUX5.pcm  _Builtin_stdatomic-3PGQF5YETHUX5.pcm  _Builtin_stdbool-3PGQF5YETHUX5.pcm  _Builtin_stddef-3PGQF5YETHUX5.pcm  _Builtin_stdint-3PGQF5YETHUX5.pcm  _DarwinFoundation1-FOXKIHXXPWT.pcm  _DarwinFoundation2-1I1TN5GAA55F4.pcm  _DarwinFoundation3-256GQRIO9ZKRF.pcm  _SwiftConcurrencyShims-6PVXR3VD9JVP.pcm  launch-35MSUYZF5STQB.pcm  libDER-R72R19RJIRZV.pcm  libkern-2D8PDRYL8VFQ.pcm  os-1VWGBLC5SM45V.pcm  os_object-1VWGBLC5SM45V.pcm  (+4 more)
widget/ShadowProxyWidget/.build/arm64-apple-macosx/release/ModuleCache/1ZIHADZOW7OJE/: Accessibility-14JBEP228SSWD.pcm  ApplicationServices-1CRCAN744IO4N.pcm  CFNetwork-31P8GDC5EWL41.pcm  CUPS-2KH16NWVLNVO0.pcm  ColorSync-1KWH2T10UXMVF.pcm  CoreData-3U3WCU0AV8KFN.pcm  CoreFoundation-1YUXQIQY0O2PG.pcm  CoreGraphics-3BVRDEA9TPJO6.pcm  CoreImage-2GOW3UHHPA7JV.pcm  CoreText-2TWBA4D5T9PK8.pcm  CoreTransferable-2R8U0VHQ829LU.pcm  (+46 more)
widget/ShadowProxyWidget/.build/arm64-apple-macosx/release/Modules/: ShadowProxyWidget.swiftdoc  ShadowProxyWidget.swiftmodule  ShadowProxyWidget.swiftsourceinfo
widget/ShadowProxyWidget/.build/arm64-apple-macosx/release/ShadowProxyWidget.build/: ShadowProxyWidget.d  output-file-map.json  sources
widget/ShadowProxyWidget/.build/arm64-apple-macosx/release/ShadowProxyWidget.product/: Objects.LinkFileList
widget/ShadowProxyWidget/Sources/ShadowProxyWidget/: ModePickerView.swift  Models.swift  ProxyClient.swift  ShadowProxyWidgetApp.swift  StatsView.swift
(+60 files in other folders)
