[workspace]
resolver = "2"
members = ["crates/shadow-tracing", "crates/shadow-proxy"]

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
# Core
anyhow = "1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Web / HTTP
axum = { version = "=0.8.4", features = ["macros"] }
reqwest = { version = "0.12.24", default-features = false, features = ["rustls-tls", "stream", "json"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
http = "1"
bytes = "1"

# Tracing / OpenTelemetry (match dynamo versions)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
tracing-opentelemetry = "0.32.0"
opentelemetry = { version = "0.31.0", features = ["trace"] }
opentelemetry_sdk = { version = "0.31.0", features = ["trace", "rt-tokio"] }
opentelemetry-otlp = { version = "0.31.0", features = ["trace", "grpc-tonic"] }

# Config
figment = { version = "0.10", features = ["env", "toml"] }

# Utilities
uuid = { version = "1.18", features = ["v4"] }
thiserror = "1"
