[package]
name = "cc-proxy"
version.workspace = true
edition.workspace = true
description = "Model gateway for routing Claude Code to self-hosted Anthropic-format deployments"

[dependencies]
cc-tracing = { path = "../cc-tracing" }

anyhow = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
reqwest = { workspace = true }
tower-http = { workspace = true }
http = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-opentelemetry = { workspace = true }
opentelemetry = { workspace = true }
futures-core = "0.3"
figment = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
