[package]
name = "shadow-tracing"
version.workspace = true
edition.workspace = true
description = "Reusable OTLP tracing library for shadow-proxy"

[dependencies]
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-opentelemetry = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
serde = { workspace = true }
